2000-06-27  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pygobject_dealloc): start of gobject wrapper.

2000-06-19  Frederic Gobry  <frederic.gobry@epfl.ch>

	* gdkimlibmodule.c: do an actual call to create_from_array instead
	of create_from_data, and fixed broken test on alpha channel

2000-04-15  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: move gtk_set_locale here, and set LC_NUMERIC back to
	"C" after call.  Python's numeric locale should be fixed on C.

2000-04-07  James Henstridge  <james@daa.com.au>

	* NEWS: added news items.

	* pygtk.spec, configure.in: updated version number.

	* configure.in (enable_numpy): added --disable-numpy argument that
	disables numeric python support even if numpy is found.

	* gtkmodule.c (PyGdkWindow_{Pointer,Keyboard}{Grab,Ungrab}): new
	GdkWindow methods.

	* gtk.py (rc_reparse_all): fix spelling mistake.
	(GtkTreeItem.__getattr__): fix bug reported by Aaron Digulla.

	* generate/gtklists.defs (gtk_clist_get_selectable): fix bug in
	return type.

2000-04-06  James Henstridge  <james@daa.com.au>

	* (lots of files): switch over to using libtool and automake-1.4a.

2000-03-13  James Henstridge  <james@daa.com.au>

	* pyglade/__init__.py: remove python-1.4 ni stuff, and put in a
	warning message that you should think of switching over to libglade.

	* pygtk.spec: incremented version number.  Code gtk+ dependency into
	spec file.  Made auxillary packages depend on the pygtk package of
	the same version.

	* configure.in: incremented version number.  Incremented minimum
	required GTK+ so that when threading is compiled in we don't get
	problems caused by using old buggy versions of GTK+.

	* gtkmodule.c (PyGdkWindow_PropertyChange): fixed the 32 bit data
	part of the case statement correctly this time :)

2000-03-08  James Henstridge  <james@daa.com.au>

	* gtkmodule.c (PyGdkWindow_PropertyChange): fixed up problem in
	property_change method that could cause a crash if data of
	size 16 or 32 was set.