@@ -1,3 +1,8 @@
+2000-06-28  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c: add get_data / set_data methods.
+	Add get_param / set_param methods.
+
 2000-06-27  James Henstridge  <james@daa.com.au>
 
 	* gobjectmodule.c (pygobject_dealloc): start of gobject wrapper.
